--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,12 @@
     <section>
       <h1>Portfólio</h1>
       <ul>
-        <li><a href="https://meusite1.com" target="_blank">Site 1</a></li>
-        <li><a href="https://meusite2.com" target="_blank">Site 2</a></li>
-        <li><a href="https://github.com/joaosilva" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/tivenix" target="_blank">GitHub</a></li>
       </ul>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 João Silva</p>
+    <p>&copy; 2025 Steven Mendes Gomes</p>
   </footer>
 </body>
 </html>
