--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <section>
       <h1>Sobre Mim</h1>
-      <p>Olá! Meu nome é João Silva. Sou apaixonado por tecnologia e programação. Meus hobbies incluem tocar violão, jogar xadrez e desenvolver pequenos projetos de software.</p>
+      <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
     </section>
   </main>
   <footer>
