--- a/formacao.html
+++ b/formacao.html
@@ -20,12 +20,12 @@
   <main>
     <section>
       <h1>Formação e Idiomas</h1>
-      <p>Sou graduado em Análise e Desenvolvimento de Sistemas.</p>
-      <p>Idiomas: Português (nativo), Inglês (intermediário).</p>
+      <p>Estou cursando Ciência de Dados na UNINTER</p>
+      <p>Idiomas: Português (nativo), Inglês (avançado).</p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 João Silva</p>
+    <p>&copy; 2025 Steven Gomes</p>
   </footer>
 </body>
 </html>
