--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 João Silva</p>
+    <p>&copy; 2025 Steven Gomes</p>
   </footer>
   <script>
     document.getElementById("form-contato").addEventListener("submit", function(event) {
