--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <section>
       <h1>Sobre Mim</h1>
       <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
+      <p>Ja trabalhei como Análista de Dados(PJ),Assistente Administrativo fazendo o controle da planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil.
+      Tambem ja trabalhei como construtor civil.</p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 João Silva</p>
+    <p>&copy; 2025 Steven Gomes</p>
   </footer>
 </body>
 </html>
