--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Steven Mendes Gomes</p>
+    <p>&copy; 2025 Steven Gomes</p>
   </footer>
 </body>
 </html>
