--- a/contato.html
+++ b/contato.html
@@ -10,6 +10,7 @@
   <header>
     <nav>
       <ul>
+        <!-- Aqui estão os links para alternar entre as abas -->
         <li><a href="index.html">Sobre Mim</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
@@ -20,6 +21,7 @@
   <main>
     <section>
       <h1>Contato</h1>
+      <!-- Form para contato -->
       <form id="form-contato">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
