--- a/formacao.html
+++ b/formacao.html
@@ -19,8 +19,10 @@
   </header>
   <main>
     <section>
+      <!-- Descrição sobre mim, explicando idiomas e cursos -->
       <h1>Formação e Idiomas</h1>
-      <p>Estou cursando Ciência de Dados na UNINTER</p>
+      <p>Estou cursando Ciência de Dados na UNINTER.</p>
+      <p>Tenho diploma de Análista de Dados pela Google.
       <p>Idiomas: Português (nativo), Inglês (avançado).</p>
     </section>
   </main>
