--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
     <section>
       <h1>Portfólio</h1>
       <ul>
+        <p>Tenho alguns códigos disponibilizados da época em que trabalhava como Análista de Dados, são códigos sobre extração de dados.</p>
         <li><a href="https://github.com/tivenix" target="_blank">GitHub</a></li>
       </ul>
     </section>
