--- a/formacao.html
+++ b/formacao.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Sobre Mim</a></li>
+        <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
         <li><a href="contato.html">Contato</a></li>
