--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <!-- Aqui estão os links para alternar entre as abas -->
-        <li><a href="index.html">Sobre Mim</a></li>
+        <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
         <li><a href="contato.html">Contato</a></li>
