--- a/formacao.html
+++ b/formacao.html
@@ -19,12 +19,15 @@
   </header>
   <main>
     <section>
-      <!-- Descrição sobre mim, explicando idiomas e cursos -->
-      <h1>Formação e Idiomas</h1>
-      <p>Estou cursando Ciência de Dados na UNINTER.</p>
-      <p>Tenho diploma de Análista de Dados pela Google.
-      <p>Idiomas: Português (nativo), Inglês (avançado).</p>
-    </section>
+  <!-- Descrição sobre mim, explicando idiomas e cursos -->
+  <h1>Formação e Idiomas</h1>
+  <ul>
+    <li>Estou cursando Ciência de Dados na UNINTER.</li>
+    <li>Tenho diploma de Analista de Dados pela Google.</li>
+    <li>Idiomas: Português (nativo), Inglês (avançado).</li>
+  </ul>
+</section>
+
   </main>
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
