--- a/formacao.html
+++ b/formacao.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <section>
-  <!-- Descrição sobre mim, explicando idiomas e cursos -->
+  <!-- Descrição sobre meus idiomas e cursos -->
   <h1>Formação e Idiomas</h1>
   <ul>
     <li>Estou cursando Ciência de Dados na UNINTER.</li>
