--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
         <textarea id="mensagem" name="mensagem" required></textarea>
         <button type="submit">Enviar</button>
       </form>
-      <p>Caso queira entrar em Contato direto, meu email é stevenmendes@live.com</p>
+      <p>Caso queira entrar em Contato direto, meu email é Stevenmendes@live.com</p>
     </section>
   </main>
   <footer>
