--- a/formacao.html
+++ b/formacao.html
@@ -23,7 +23,7 @@
   <h1>Formação e Idiomas</h1>
   <ul>
     <li>Estou cursando Ciência de Dados na UNINTER.</li>
-    <li>Tenho diploma de Analista de Dados pela Google.</li>
+    <li>Tenho diploma de Analista de Dados pelo Google.</li>
     <li>Idiomas: Português (nativo), Inglês (avançado).</li>
   </ul>
 </section>
