--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <section>
+  <section>
   <h1>Sobre Mim</h1>
-  <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
-
-  <p>Já trabalhei como Analista de Dados (PJ), Assistente Administrativo fazendo controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil. Também já trabalhei como construtor civil.</p>
+  <ul>
+    <li>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</li>
+    <li>Já trabalhei como Analista de Dados (PJ) na empresa Villela Brasil.</li>
+    <li>Assistente Administrativo fazendo o controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil</li>
+    <li>Também já trabalhei como construtor civil.</li>  
+  </ul>
 </section>
 
   </main>
