--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   <h1>Sobre Mim</h1>
   <ul>
     <li>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</li>
-    <li>Já trabalhei como Analista de Dados (PJ) na empresa Villela Brasil.</li>
-    <li>Assistente Administrativo fazendo o controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil</li>
-    <li>Também já trabalhei como construtor civil.</li>  
+    <p>Comecei a aprender progrmação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessario fazer a extração dos dados.</p>
   </ul>
 </section>
 
