--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </header>
   <section>
   <h1>Sobre Mim</h1>
-  <ul>
-    <li>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</li>
-    <p>Comecei a aprender progrmação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessario fazer a extração dos dados.</p>
-  </ul>
+
+    <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
+    <p>Comecei a aprender progrmação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessario fazer a extração dos dados.
+
 </section>
 
   </main>
