--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
       <h1>Portfólio</h1>
       <ul>
         <p>Tenho alguns códigos disponibilizados da época em que trabalhava como Análista de Dados, são códigos sobre extração de dados.</p>
-        <li>Também já trabalhei como construtor civil.</li>  
-        <li>Já trabalhei como Analista de Dados (PJ) na empresa Villela Brasil.</li>
+        <li>Comecei como Construtor Civil, fui apresentado a oportunidade por um cliente enquanto trabalhava por ter conhecimento em informatica.</li>  
+        <li>Após isso trabalhei como Analista de Dados (PJ) na empresa Villela Brasil.</li>
         <li>Assistente Administrativo fazendo o controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil</li>
        
         <li><a href="https://github.com/tivenix" target="_blank">GitHub</a></li>
