--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sobre Mim</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
-      <ul>
+      <ul class="menu">
         <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
@@ -17,13 +17,13 @@
       </ul>
     </nav>
   </header>
-  <section>
-  <h1>Sobre Mim</h1>
 
+  <section class="conteudo">
+    <h1>Sobre Mim</h1>
     <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
-    <p>Comecei a aprender progrmação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessario fazer a extração dos dados.</p>
+    <p>Comecei a aprender programação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessário fazer a extração dos dados.</p>
+  </section>
 
-</section>
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
   </footer>
