--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       </ul>
     </nav>
   </header>
-
+  <main>
   <section class="conteudo">
     <h1>Sobre Mim</h1>
     <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
     <p>Comecei a aprender programação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessário fazer a extração dos dados.</p>
   </section>
-
+  </main>
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
   </footer>
