--- a/formacao.html
+++ b/formacao.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Formação</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
-      <ul>
+      <ul class="menu">
         <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
@@ -17,18 +17,18 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <section>
-  <!-- Descrição sobre meus idiomas e cursos -->
-  <h1>Formação e Idiomas</h1>
-  <ul>
-    <li>Estou cursando Ciência de Dados na UNINTER.</li>
-    <li>Tenho diploma de Análise de Dados certificado pelo Google.</li>
-    <li>Idiomas: Português (nativo), Inglês (avançado).</li>
-  </ul>
-</section>
 
+  <main>
+    <section class="conteudo">
+      <h1>Formação e Idiomas</h1>
+      <ul>
+        <li>Estou cursando Ciência de Dados na UNINTER.</li>
+        <li>Tenho diploma de Análise de Dados certificado pelo Google.</li>
+        <li>Idiomas: Português (nativo), Inglês (avançado).</li>
+      </ul>
+    </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
   </footer>
