--- a/contato.html
+++ b/contato.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contato</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
-      <ul>
-        <!-- Aqui estão os links para alternar entre as abas -->
+      <ul class="menu">
         <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
@@ -18,25 +17,30 @@
       </ul>
     </nav>
   </header>
+
   <main>
-    <section>
+    <section class="conteudo">
       <h1>Contato</h1>
-      <!-- Form para contato -->
       <form id="form-contato">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="mensagem">Mensagem:</label>
-        <textarea id="mensagem" name="mensagem" required></textarea>
+        <label for="nome">Nome:</label><br />
+        <input type="text" id="nome" name="nome" required /><br />
+
+        <label for="email">Email:</label><br />
+        <input type="email" id="email" name="email" required /><br />
+
+        <label for="mensagem">Mensagem:</label><br />
+        <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br />
+
         <button type="submit">Enviar</button>
       </form>
-      <p>Caso queira entrar em Contato direto, meu email é Stevenmendes@live.com</p>
+      <p>Caso queira entrar em contato direto, meu email é Stevenmendes@live.com</p>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
   </footer>
+
   <script>
     document.getElementById("form-contato").addEventListener("submit", function(event) {
       event.preventDefault();
