--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfólio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
-      <ul>
+      <ul class="menu">
         <li><a href="index.html">Informações Pessoais</a></li>
         <li><a href="formacao.html">Formação</a></li>
         <li><a href="portfolio.html">Portfólio</a></li>
@@ -17,19 +17,20 @@
       </ul>
     </nav>
   </header>
+
   <main>
-    <section>
+    <section class="conteudo">
       <h1>Portfólio</h1>
+      <p>Tenho alguns códigos disponibilizados da época em que trabalhava como Analista de Dados, são códigos sobre extração de dados.</p>
       <ul>
-        <p>Tenho alguns códigos disponibilizados da época em que trabalhava como Análista de Dados, são códigos sobre extração de dados.</p>
-        <li>Comecei como Construtor Civil, fui apresentado a oportunidade por um cliente enquanto trabalhava por ter conhecimento em informatica.</li>  
+        <li>Comecei como Construtor Civil, fui apresentado a oportunidade por um cliente enquanto trabalhava por ter conhecimento em informática.</li>
         <li>Após isso trabalhei como Analista de Dados (PJ) na empresa Villela Brasil.</li>
-        <li>Assistente Administrativo fazendo o controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil</li>
-       
-        <li><a href="https://github.com/tivenix" target="_blank">GitHub</a></li>
+        <li>Assistente Administrativo fazendo o controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil.</li>
+        <li><a href="https://github.com/tivenix" target="_blank" rel="noopener noreferrer">GitHub</a></li>
       </ul>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Steven Gomes</p>
   </footer>
