--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
         <input type="email" id="email" name="email" required /><br />
 
         <label for="mensagem">Mensagem:</label><br />
-        <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br />
+        <textarea id="mensagem" name="mensagem" required></textarea><br />
 
         <button type="submit">Enviar</button>
       </form>
