--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <main>
     <section class="conteudo">
       <h1>Sobre Mim</h1>
-      <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.</p>
-      <p>Comecei a aprender programação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessário fazer a extração de dados.</p>
+      <p>Meu nome é Steven Gomes. Eu gosto de aprender programação para meus objetivos pessoais. Meus hobbies são academia, esportes no geral.
+        Comecei a aprender programação porque fui apresentado a uma oportunidade para trabalhar com banco de dados e era necessário fazer a extração de dados.</p>
     </section>
   </main>
 
