--- a/contato.html
+++ b/contato.html
@@ -22,14 +22,14 @@
     <section class="conteudo">
       <h1>Contato</h1>
       <form id="form-contato">
-        <label for="nome">Nome:</label><br />
-        <input type="text" id="nome" name="nome" required /><br />
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required />
 
-        <label for="email">Email:</label><br />
-        <input type="email" id="email" name="email" required /><br />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
 
-        <label for="mensagem">Mensagem:</label><br />
-        <textarea id="mensagem" name="mensagem" required></textarea><br />
+        <label for="mensagem">Mensagem:</label>
+        <textarea id="mensagem" name="mensagem" required></textarea>
 
         <button type="submit">Enviar</button>
       </form>
