--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <h1>Portfólio</h1>
       <p>Tenho alguns códigos disponibilizados da época em que trabalhava como Analista de Dados, são códigos sobre extração de dados.</p>
       <ul>
-        <li>Comecei como Construtor Civil. Fui apresentado a uma oportunidade por um cliente, enquanto trabalhava, por ter conhecimento em informática.</li>
+        <li>Comecei como Construtor Civil. Fui apresentado a uma oportunidade por um cliente enquanto trabalhava, por ter conhecimento em informática.</li>
         <li>Analista de Dados (PJ) na empresa Villela Brasil.</li>
         <li>Assistente Administrativo, realizando controle de planilhas, contato com clientes e gestão de LEADS na empresa Villela Brasil.</li>
         <li>Veja mais no meu <a href="https://github.com/tivenix" target="_blank" rel="noopener noreferrer">GitHub</a>.</li>
